feat(merchant): enhance merchant list filtering and sorting functionality
- Introduce multi-selector for condition, region, and sorting options in the merchant list page, improving user experience.
- Implement initialization methods for region and condition data, allowing dynamic updates based on user selections.
- Update backend API to support new filtering parameters, including recommendations and favorite-only options.
- Refactor frontend components to ensure accurate data binding and display of selected filters.